# ezGTAUnpacker

./: .gitmodules  CMakeLists.txt  Instructions.txt  README.md  data.json
src/: main.cpp  pch.hpp  utils.hpp
src/SDK/: SDK.hpp  memBlock.cpp  memBlock.hpp  memUtils.cpp  memUtils.hpp
src/patch/: patch.cpp  patch.hpp
src/smartBuffer/: smartBuffer.cpp  smartBuffer.hpp
src/unpacker/: unpacker.cpp  unpacker.hpp
